# tcqt

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
examples/: ass_export_test.py  brick_texture.py  caching.py  exm_threading.py  ptf.py  rooftop_tiles.py  threads_example.py
src/tcqt/: __init__.py  cache.py  dev_tools.py  geom.py  parabolic.py  screws.py  selectors.py  threads.py  washers.py  workplane.py
src/tcqt/assembly/: assembly.py  export_bambu_3mf.py
src/tcqt/joints/: dovetail.py  heatsert_joint.py  joint.py
src/tcqt/primitives/: geom.py  parabolic.py  teardrop.py  thread.py
src/tcqt/texture/: __init__.py  _add_texture.py  brick.py  hex.py  hex_grid.py  linear.py  rooftop.py  tex_details.py
src/tcqt/transforms/: align.py  merge.py
