[project]

name = "tcqt"
description = "Ted's CadQuery Tools"
version = "0.1.0"
requires-python = ">=3.11,<4"

dependencies = [
    "cadquery>=2.5.2",
    "numpy>=1.24.0",
    "numpy-stl>=3.2.0",
]

[dependency-groups]
dev = [
    "vtk",
    "tqdm"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcqt"]


[tool.ruff]

target-version = "py311"
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]

[tool.uv.sources]

[tool.pytest.ini_options]
log_level = "DEBUG"
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
